--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/conduct.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/conduct.html
@@ -1,42 +1,1 @@
-﻿<div class="test-conduct">
-    <div class="promact-logo text-center">
-        <img src="../../images/promact-logo.png" alt="Promact Logo" />
-    </div>
-    <div class="registration-block">
-        <form>
-            <h2>Registration Form</h2>
-            <div class="form-group">
-                <label class="h4">First Name</label>
-                <input type="text" class="form-control" />
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Last Name</label>
-                <input type="text" class="form-control" />
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Email</label>
-                <input type="email" class="form-control" />
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Roll Number</label>
-                <input type="text" class="form-control" />
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Contact Number</label>
-                <input type="text" class="form-control" />
-                <div class="errors-container"></div>
-            </div>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </form>
-    </div>
-    <div class="trappist-logo text-center">
-        <p>Powered By</p>
-        <img src="../../images/logo.png" alt="Logo" />
-    </div>
-</div>
+﻿<router-outlet></router-outlet>
