Changed image paths and minor css changes.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/conduct.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/conduct.html
@@ -1,1 +1,10 @@
-﻿<router-outlet></router-outlet>
+﻿<div class="test-conduct">
+    <div class="promact-logo text-center">
+        <img src="/images/promact-logo.png" alt="Promact Logo" />
+    </div>
+    <router-outlet></router-outlet>
+    <div class="trappist-logo text-center">
+        <p>Powered By</p>
+        <img src="/images/logo.png" alt="Logo" />
+    </div>
+</div>
