--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/setup/setup.html
@@ -4,7 +4,7 @@
     </div>
     <div class="setup-content">
         <div class="logo-area">
-            <img src="../../images/logo.png" alt="Logo" />
+            <img src="/images/logo.png" alt="Logo" />
         </div>
         <div class="wizard-area">
             <form-wizard #setup>
