--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -5,7 +5,7 @@
         <span [hidden]="editName">{{testsettings.testName}}</span>
         <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test"
                [(ngModel)]="testsettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150" (focusout)="editName = !editName"
-               [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="testNameUpdation(testsettings.id,testsettings,testsettings.testName)" />
+               [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="updateTestName(testsettings.id,testsettings,testsettings.testName)" />
         <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required">Name is required</span>
         <span class="error-msg" *ngIf="name.errors && (name.touched || name.pristine || name.untouched)" [hidden]="!name.errors.pattern">Enter valid Test Name</span>
         <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.maxlength">Test Name should not exceed 150 characters</span>
@@ -24,14 +24,14 @@
       </div>
       <div class="form-group inline-field">
         <label class="h4">Start Date & Time</label>
-        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.startDate" name="Start Date" (mouseup)="validStartDateChecking()" />
+        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
         <div class="errors-container">
           <span class="error-msg" *ngIf="validStartDate">Start Date must be valid</span>
         </div>
       </div>
       <div class="form-group inline-field">
         <label class="h4">End Date & Time</label>
-        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" (mouseup)="validEndDateChecking(testsettings.endDate)" />
+        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" (mouseup)="isEndDateValid(testsettings.endDate)" />
         <div class="errors-container">
           <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater</span>
         </div>
