empty test creation issue resolved and display of validation messages improved

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
@@ -7,9 +7,11 @@
         <div class="form-group">
             <label class="h4">Test Name</label>
             <input type="text" id="name" name="name" class="form-control" (blur)="ChangeError()" placeholder="Ex. Software Developer Recruitment Test" [(ngModel)]="testNameReference" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&*^{}+;:<>()-]*$" maxlength="150" />
-            <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required">Name is required</span>
-            <span class="error-msg" *ngIf="name.errors && (name.touched || name.pristine || name.untouched)" [hidden]="!name.errors.pattern">Enter valid Test Name</span>
-            <span class="error-msg" *ngIf="errorMessage" [hidden]="(name.errors && (name.dirty || name.touched)) || name.pristine">Test with this name already exists</span>
+            <div class="errors-container">
+                <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.required">Name is required</span>
+                <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.pattern">Enter a valid Test Name</span>
+                <span class="error-msg" *ngIf="errorMessage">Test with this name already exists</span>
+            </div>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
