--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
@@ -6,14 +6,14 @@
             <h5 *ngIf="isSingleAnswerQuestion">Single Answer Question</h5>
             <h5 *ngIf="!isSingleAnswerQuestion">Multiple Answer Question</h5>
         </div>
-        <form (ngSubmit)="singleMultipleQuestionAnswerAdd(singleMultipleQuestion)" #singleMultipleQuestionForm="ngForm">
+        <form (ngSubmit)="saveSingleMultipleAnswerQuestion(singleMultipleAnswerQuestion)" #singleMultipleAnswerQuestionForm="ngForm">
             <div class="form-fields">
                 <div>
-                    <input type="text" class="form-control" placeholder="Question Test" [(ngModel)]="singleMultipleQuestion.question.questionDetail" id="question" #question="ngModel" [ngModelOptions]="{standalone: true}" required/>
+                    <input type="text" class="form-control" placeholder="Question Test" [(ngModel)]="singleMultipleAnswerQuestion.question.questionDetail" id="question" #question="ngModel" [ngModelOptions]="{standalone: true}" required/>
                     <span *ngIf="question.invalid && question.touched" class="alert-danger">Question field is required</span>
                 </div>
                 <div class="form-group answer-choices" *ngIf="isSingleAnswerQuestion">
-                    <md-radio-group [(ngModel)]="value" name="first" *ngFor="let option of singleMultipleQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" required>
+                    <md-radio-group [(ngModel)]="value" name="first" *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" required>
                         <md-radio-button  value="{{i}}" [disabled]="choice.pristine">
                             <input type="text" class="form-control" placeholder="Answer Choice" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required/>
                             <i class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</i><br />
@@ -23,7 +23,7 @@
                     <p class="tip">Tip: Click the radio button to mark the correct answer</p>
                 </div>
                 <div class="form-group answer-choices" *ngIf="!isSingleAnswerQuestion">
-                    <md-checkbox *ngFor="let option of singleMultipleQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" [(ngModel)]="option.isAnswer" name="first" [disabled]="choice.pristine" (ngModelChange)="isOptionSelected=true">
+                    <md-checkbox *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" [(ngModel)]="option.isAnswer" name="first" [disabled]="choice.pristine" (ngModelChange)="isOptionSelected=true">
                         <input type="text" class="form-control" placeholder="Write Your Answer" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required />
                         <i class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</i><br />
                         <span *ngIf="choice.invalid && choice.touched" class="alert-danger">This field is required</span>
@@ -38,7 +38,7 @@
                         </select>
                     </div> 
                     <div class="form-group col-md-2 col-sm-2 pl0">
-                        <select name="difficulty" class="form-control" [(ngModel)]="singleMultipleQuestion.question.difficultyLevel" [ngModelOptions]="{standalone:true}" #difficulty="ngModel">
+                        <select name="difficulty" class="form-control" [(ngModel)]="singleMultipleAnswerQuestion.question.difficultyLevel" [ngModelOptions]="{standalone:true}" #difficulty="ngModel">
                             <option  [disabled]="difficulty.dirty" value="0">Select Difficulty</option>
                             <option *ngFor="let level of difficultyLevel">{{level}}</option>
                         </select>                       
@@ -47,9 +47,8 @@
             </div>
             <div class="actions-area">
                 <button type="button" class="btn" click="cancelButtonClicked()">Cancel</button>
-                <button type="submit" class="btn btn-primary" [disabled]="singleMultipleQuestionForm.invalid || difficulty.pristine || category.pristine">Save</button>
+                <button type="submit" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || difficulty.pristine || category.pristine">Save</button>
             </div>
         </form>
-
     </div>
 </div>
