Designed Test Summary page & End Test Message page.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
@@ -23,6 +23,6 @@
     </ul>
     <div class="text-center">
         <h2 class="mb20">All the Best!</h2>
-        <button class="btn btn-primary">Start Test</button>
+        <button type="button" class="btn btn-primary">Start Test</button>
     </div>
 </div>
