Fixed issue with unit testing, Fixed class name on client side
Removed System.Linq

Added username string, removed duplicate binding

Resolved summary naming convention

Removed const keyword from variable name

Added Async in question add operation

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -53,7 +53,7 @@
               <input mdInput placeholder="Code Languages" [mdAutocomplete]="code" #autocomplete ngModel name="languageInput" #languageInput="ngModel">
             </md-input-container>
             <md-autocomplete #code="mdAutocomplete">
-              <md-option *ngFor="let language of codingLanguageList" (click)="selectLanguage(language)" value="{{language}}">{{language}}</md-option>
+              <md-option *ngFor="let language of codingLanguageList" (click)="selectLanguage(language)">{{language}}</md-option>
             </md-autocomplete>
           </md-chip-list>
           <div class="errors-container">
