Made after development design changes for questions module.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -16,7 +16,7 @@
                 <ul class="category-list">
                     <li class="active h5">All Questions</li>
                     <li *ngFor="let category of categoryArray" class="clearfix h5">
-                        {{category.categoryName}}
+                        <span title="{{category.categoryName}}">{{category.categoryName}}</span>
                         <em class="material-icons pull-right" [mdMenuTriggerFor]="categoryMenu">more_vert</em>
                         <md-menu #categoryMenu="mdMenu" [overlapTrigger]="false" x-position="before">
                             <button md-menu-item (click)="renameCategoryDialog(category)">Rename</button>
