--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
@@ -1,5 +1,4 @@
-﻿
-<div class="container">
+﻿<div class="container">
     <div class="question-type">
         <div class="header">
             <h2>Question</h2>
@@ -8,40 +7,46 @@
         </div>
         <form (ngSubmit)="saveSingleMultipleAnswerQuestion(singleMultipleAnswerQuestion)" #singleMultipleAnswerQuestionForm="ngForm">
             <div class="form-fields">
-                <div>
-                    <input type="text" class="form-control" placeholder="Question Test" [(ngModel)]="singleMultipleAnswerQuestion.question.questionDetail" id="question" #question="ngModel" [ngModelOptions]="{standalone: true}" required/>
-                    <span *ngIf="question.invalid && question.touched" class="alert-danger">Question field is required</span>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Question Test" [(ngModel)]="singleMultipleAnswerQuestion.question.questionDetail" id="question" #question="ngModel" [ngModelOptions]="{standalone: true}" required />
+                    <div class="errors-container">
+                        <span *ngIf="question.invalid && question.touched" class="error-msg">Question field is required</span>
+                    </div>
                 </div>
                 <div class="form-group answer-choices" *ngIf="isSingleAnswerQuestion">
                     <md-radio-group [(ngModel)]="value" name="first" *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" required>
-                        <md-radio-button  value="{{i}}" [disabled]="choice.pristine">
-                            <input type="text" class="form-control" placeholder="Answer Choice" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required/>
-                            <i class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</i><br />
-                            <span *ngIf="choice.invalid && choice.touched" class="alert-danger">This field is required</span>                 
-                        </md-radio-button> 
+                        <md-radio-button value="{{i}}" [disabled]="choice.pristine">
+                            <input type="text" class="form-control" placeholder="Answer Choice" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required />
+                            <em class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</em>
+                            <div class="errors-container">
+                                <span *ngIf="choice.invalid && choice.touched" class="error-msg mt6 ml10">This field is required</span>
+                            </div>
+                        </md-radio-button>
                     </md-radio-group>
                     <p class="tip">Tip: Click the radio button to mark the correct answer</p>
                 </div>
                 <div class="form-group answer-choices" *ngIf="!isSingleAnswerQuestion">
                     <md-checkbox *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" [(ngModel)]="option.isAnswer" name="first" [disabled]="choice.pristine" (ngModelChange)="isOptionSelected=true">
-                        <input type="text" class="form-control" placeholder="Write Your Answer" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required />
-                        <i class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</i><br />
-                        <span *ngIf="choice.invalid && choice.touched" class="alert-danger">This field is required</span>
+                        <input type="text" class="form-control" placeholder="Answer Choice" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required />
+                        <em class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</em>
+                        <div class="errors-container">
+                            <span *ngIf="choice.invalid && choice.touched" class="error-msg mt6 ml10">This field is required</span>
+                        </div>
                     </md-checkbox>
                     <p class="tip">Tip: Click the check boxes to mark the correct answers</p>
                 </div>
-                <div class="form-fields">
+                <div class="form-inline clearfix">
                     <div class="form-group col-md-4 col-sm-4 pl0">
                         <select class="form-control" [(ngModel)]="categoryName" (change)="getCategoryId()" id="category" #category="ngModel" [ngModelOptions]="{standalone: true}">
                             <option [disabled]="category.dirty">Select Category</option>
                             <option *ngFor="let category of categoryArray">{{category.categoryName}}</option>
                         </select>
-                    </div> 
+                    </div>
                     <div class="form-group col-md-2 col-sm-2 pl0">
                         <select name="difficulty" class="form-control" [(ngModel)]="singleMultipleAnswerQuestion.question.difficultyLevel" [ngModelOptions]="{standalone:true}" #difficulty="ngModel">
-                            <option  [disabled]="difficulty.dirty" value="0">Select Difficulty</option>
+                            <option [disabled]="difficulty.dirty" value="0">Select Difficulty</option>
                             <option *ngFor="let level of difficultyLevel">{{level}}</option>
-                        </select>                       
+                        </select>
                     </div>
                 </div>
             </div>
