--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -2,13 +2,12 @@
   <div class="header-block clearfix">
     <div class="container">
       <h1 class="pull-left">
-        <span [hidden]="editName">{{testsettings.testName}}</span>
-        <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test"
-               [(ngModel)]="testsettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150" (focusout)="editName = !editName"
-               [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="updateTestName(testsettings.id,testsettings)" />
+        <span [hidden]="editName">{{testSettings.testName}}</span>
+        <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test" 
+               [(ngModel)]="testSettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150" (focusout)="editName = !editName"
+               [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="updateTestName(testSettings.id,testSettings)" />
         <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required">Name is required</span>
         <span class="error-msg" *ngIf="name.errors && (name.touched || name.pristine || name.untouched)" [hidden]="!name.errors.pattern">Enter valid Test Name</span>
-        <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.maxlength">Test Name should not exceed 150 characters</span>
         <em class="material-icons" (click)="editName = !editName">edit</em>
       </h1>
       <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
@@ -19,19 +18,19 @@
     <form class="form-area">
       <div class="form-group">
         <label class="h4">Time Duration (mins)</label>
-        <input type="number" class="form-control small-width" [(ngModel)]="testsettings.duration" name="Duration" placeholder="00" max="180" min="0" />
+        <input type="number" class="form-control small-width" [(ngModel)]="testSettings.duration" name="Duration" placeholder="00" max="180" min="0" />
         <div class="errors-container"></div>
       </div>
       <div class="form-group inline-field">
         <label class="h4">Start Date & Time</label>
-        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
+        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
         <div class="errors-container">
           <span class="error-msg" *ngIf="validStartDate">Start Date must be valid</span>
         </div>
       </div>
       <div class="form-group inline-field">
         <label class="h4">End Date & Time</label>
-        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" (mouseup)="isEndDateValid(testsettings.endDate)" />
+        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.endDate" name="End Date" (mouseup)="isEndDateValid(testSettings.endDate)" />
         <div class="errors-container">
           <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater</span>
         </div>
@@ -39,18 +38,18 @@
       <div class="form-group ip-restrictions-field">
         <label class="h4">IP Restrictions</label>
         <br />
-        <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testsettings.fromIpAddress" required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+        <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testSettings.fromIpAddress" required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
         <div class="errors-container">
           <span class="error-msg" *ngIf="From.errors && (From.touched || From.pristine || From.untouched)" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
         </div>
-        <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testsettings.toIpAddress" #To=ngModel required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+        <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testSettings.toIpAddress" #To=ngModel required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
         <div class="errors-container">
           <span class="error-msg" *ngIf="To.errors && (To.untouched || To.pristine || To.dirty)" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
         </div>
       </div>
       <div class="form-group">
         <label class="h4">Browser Tolerance</label>
-        <select class="form-control half-width" [(ngModel)]="testsettings.browserTolerance" name="Browser Tolerance">
+        <select class="form-control half-width" [(ngModel)]="testSettings.browserTolerance" name="Browser Tolerance">
           <option>0</option>
           <option>1</option>
           <option>2</option>
@@ -80,22 +79,22 @@
       </div>
       <div class="form-group inline-field">
         <label class="h4">Correct Marks</label>
-        <input type="number" class="form-control small-width" [(ngModel)]="testsettings.correctMarks" name="Correct Marks" min="0" />
+        <input type="number" class="form-control small-width" [(ngModel)]="testSettings.correctMarks" name="Correct Marks" min="0" />
         <div class="errors-container"></div>
       </div>
       <div class="form-group inline-field">
         <label class="h4">Incorrect Marks</label>
-        <input type="number" class="form-control small-width" [(ngModel)]="testsettings.incorrectMarks" name="Incorrect Marks" min="0" />
+        <input type="number" class="form-control small-width" [(ngModel)]="testSettings.incorrectMarks" name="Incorrect Marks" min="0" />
         <div class="errors-container"></div>
       </div>
       <div class="form-group">
         <label class="h4">Warning Message</label>
-        <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testsettings.warningMessage" name="Warning Message" maxlength="255"></textarea>
+        <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testSettings.warningMessage" name="Warning Message" maxlength="255"></textarea>
         <div class="errors-container"></div>
       </div>
       <div class="form-group">
         <label class="h4">Warning Time (mins)</label>
-        <input type="number" class="form-control small-width" placeholder="00" [(ngModel)]="testsettings.warningTime" name="Warning Time" min="0" (click)="isWarningTimeValid()" />
+        <input type="number" class="form-control small-width" placeholder="00" [(ngModel)]="testSettings.warningTime" name="Warning Time" min="0" (click)="isWarningTimeValid()" />
         <div class="errors-container">
           <span class="error-msg" *ngIf="validTime">Warning Time should be less than Time Duration</span>
         </div>
@@ -110,8 +109,8 @@
             <li class="h5 active"><a [routerLink]="['/tests/settings']">Settings & Schedule</a></li>
           </ul>
           <div class="buttons-block pull-right">
-            <button type="button" class="btn" [routerLink]="['/tests']" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" (click)="launchTestDialog(testsettings.id,testsettings)">Save & Exit</button>
-            <button type="submit" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" class="btn btn-primary" (click)="launchTestDialog(testsettings.id,testsettings)">Save & Share</button>
+            <button type="button" class="btn" [routerLink]="['/tests']" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" (click)="launchTestDialog(testSettings.id,testSettings)">Save & Exit</button>
+            <button type="submit" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" class="btn btn-primary" (click)="launchTestDialog(testSettings.id,testSettings)">Save & Share</button>
           </div>
         </div>
       </div>
