--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
@@ -23,7 +23,8 @@
                             </div>
                         </md-radio-button>
                     </md-radio-group>
-                    <p class="tip">Tip: Click the radio button to mark the correct answer</p>
+                    <button type="button" class="btn btn-primary" (click)="addOption()" *ngIf="!isNoOfOptionOverLimit">Add Option</button>
+                    <p class="tip">Tip: Click the radio button to mark the correct answer. Minimum 2 options are required and maximum 10 options can be added.</p>
                 </div>
                 <div class="form-group answer-choices" *ngIf="!isSingleAnswerQuestion">
                     <md-checkbox *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" [(ngModel)]="option.isAnswer" name="first" [disabled]="choice.pristine" (ngModelChange)="isOptionSelected=true">
@@ -33,9 +34,9 @@
                             <span *ngIf="choice.invalid && choice.touched" class="error-msg mt6 ml10">This field is required</span>
                         </div>
                     </md-checkbox>
-                    <p class="tip">Tip: Click the check boxes to mark the correct answers</p>
+                    <button type="button" class="btn btn-primary" (click)="addOption()" *ngIf="!isNoOfOptionOverLimit">Add Option</button>
+                    <p class="tip">Tip: Click the check boxes to mark the correct answers. Minimum 2 options are required and maximum 10 options can be added.</p>
                 </div>
-                <button type="button" (click)="addOption()" *ngIf="!isNoOfOptionOverLimit">Add Option</button>
                 <div class="form-inline clearfix">
                     <div class="form-group col-md-4 col-sm-4 pl0">
                         <select class="form-control" [(ngModel)]="categoryName" (change)="getCategoryId()" id="category" #category="ngModel" [ngModelOptions]="{standalone: true}">
